--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script type="module">
         import { titleBar } from './components/titleBar.js';
         
-        titleBar('container', 'images/newspaper.png', '뉴스 메인 로고', '뉴스스탠드', '2024. 02. 14. 수요일');
+        titleBar('container', 'images/newspaper.png', '뉴스 메인 로고', '뉴스스탠드');
     </script>
 </body>
 </html>
