배치 수정 전

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>NAVER Newsstand</title>
 </head>
 <body>
+
   <div id="newsstand">
     <div id="newsstand-header">
       <div class="left-content">
@@ -18,6 +19,7 @@
         <a href="#" class="date">2024.09.24.화요일</a>
       </div>
     </div>
+
     <div id="newsstand-gray">
       <div id="content" class="left">
         <a href="#" class="bold">연합뉴스</a>
@@ -28,6 +30,7 @@
         <a href="#" class="underline">[속보] 與최고위원 본경선, 김병민·김용태·김재원·민영삼</a>
       </div>
     </div>
+
     <div id="mediacontent">
       <div id="mediaheader">
         <div class="left-content">
@@ -39,6 +42,7 @@
           <button class="view_grid"><span>격자보기</span></button>
         </div>
       </div>
+
       <div id="newsstand-grid">
         <div><img src="/MediaCompany/1.png" alt="언론사"></div>
         <div><img src="/MediaCompany/2.png" alt="언론사"></div>
@@ -66,7 +70,22 @@
         <div><img src="/MediaCompany/24.png" alt="언론사"></div>
       </div>
     </div>
-    
+    <div id="listcontent"></div>
+      <nav>
+        <ul>
+          <li><a>종합/경제</a></li>
+          <li><a>방송/통신</a></li>
+          <li><a>IT</a></li>
+          <li><a>영자지</a></li>
+          <li><a>스포츠/연예</a></li>
+          <li><a>매거진/전문지</a></li>
+          <li><a>지역</a></li>
+        </ul>
+      </nav>
+      <div id="content">
+        
+      </div>
+    </div>
   </div>
 </body>
 </html>
