리스트보기 구조 - 네비게이션 바 구현

--- a/index.html
+++ b/index.html
@@ -31,59 +31,62 @@
       </div>
     </div>
 
-    <div id="mediacontent">
-      <div id="mediaheader">
-        <div class="left-content">
-          <a href="#" id="all">전체 언론사</a>
-          <a href="#" id="subscribed">내가 구독한 언론사</a>
-        </div>
-        <div class="right-content">
-          <button class="view_list"><span>목록보기</span></button>
-          <button class="view_grid"><span>격자보기</span></button>
-        </div>
+    <div id="mediaheader">
+      <div class="left-content">
+        <a href="#" id="all">전체 언론사</a>
+        <a href="#" id="subscribed">내가 구독한 언론사</a>
       </div>
-
-      <div id="newsstand-grid">
-        <div><img src="/MediaCompany/1.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/2.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/3.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/4.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/5.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/6.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/7.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/8.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/9.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/10.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/11.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/12.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/13.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/14.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/15.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/16.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/17.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/18.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/19.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/20.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/21.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/22.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/23.png" alt="언론사"></div>
-        <div><img src="/MediaCompany/24.png" alt="언론사"></div>
+      <div class="right-content">
+        <button class="view_list"><span>목록보기</span></button>
+        <button class="view_grid"><span>격자보기</span></button>
       </div>
     </div>
-    <div id="listcontent"></div>
-      <nav>
-        <ul>
-          <li><a>종합/경제</a></li>
-          <li><a>방송/통신</a></li>
-          <li><a>IT</a></li>
-          <li><a>영자지</a></li>
-          <li><a>스포츠/연예</a></li>
-          <li><a>매거진/전문지</a></li>
-          <li><a>지역</a></li>
-        </ul>
-      </nav>
-      <div id="content">
-        
+
+    <div id="newsstand-grid">
+      <div><img src="/MediaCompany/1.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/2.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/3.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/4.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/5.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/6.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/7.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/8.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/9.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/10.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/11.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/12.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/13.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/14.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/15.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/16.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/17.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/18.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/19.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/20.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/21.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/22.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/23.png" alt="언론사"></div>
+      <div><img src="/MediaCompany/24.png" alt="언론사"></div>
+    </div>
+
+
+    <nav id="listcontent">
+      <ul>
+        <li><a>종합/경제</a></li>
+        <li><a>방송/통신</a></li>
+        <li><a>IT</a></li>
+        <li><a>영자지</a></li>
+        <li><a>스포츠/연예</a></li>
+        <li><a>매거진/전문지</a></li>
+        <li><a>지역</a></li>
+      </ul>
+    </nav>
+      <div id="contentbox">
+        <div id="header">
+          <img src="/MediaCompany/1.png" alt="언론사">
+          <a href="#" class="Edit_Date">2023.02.10. 18:27 편집</a>
+          <button class="subscribe"><span>+ 구독하기</span></button>
+        </div>
       </div>
     </div>
   </div>
